package org.springframework.cloud.pattern.product.monitor;

/**
 * @author zhy
 * @date 2022/3/3 9:34
 */
public interface Monitor {
    void display();
}
