package org.springframework.cloud.pattern.product.mouse;

/**
 * @author zhy
 * @date 2022/3/3 9:37
 */
public interface Mouse {
    void click();
}
