package org.springframework.cloud.pattern.product;

/**
 * @author zhy
 * @date 2022/3/1 17:52
 */
public interface Keyboard {
    void display();
}
